# ChangeLog for dev-util/cake
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  16 Jun 2011; James Rowe <jnrowe@gmail.com> cake-0.2.ebuild:
  Keyworded x86.

  15 Jun 2011; James Rowe <jnrowe@gmail.com> cake-0.2.ebuild:
  Keyworded amd64.

  18 May 2011; James Rowe <jnrowe@gmail.com> cake-0.2.ebuild:
  Keyworded ~x86.

*cake-0.2 (16 May 2011)

  16 May 2011; James Rowe <jnrowe@gmail.com> +cake-0.2.ebuild, +metadata.xml,
  +watch:
  Initial ebuild, by me [365].
