@@ -1,11 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
+DIST cake-0.2.2.tar.gz 3968 RMD160 34626a648461620484f9e54dc8304e762c49d4d5 SHA1 2cb5462d005575094b9e20b270eac9ea5deabda4 SHA256 b01ad4ad7024798960cb891d7d4a60e8652965394402fa7a9b58eaf9782534c4
 DIST cake-0.2.tar.gz 3803 RMD160 ee38999ff0815676d1e13bb4d90ae910ec091b9d SHA1 3d4574d03dbdf5a818c85c0ad6d8da5c928f4374 SHA256 054fb711a9e1ef0bc0a187a4c45a15df9ffcbe358a5d81c7dd6cfe3c787527ea
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7AptwACgkQzJrj3cAXR0mZwQCgtM7rYnCKBDFOQU2xGSeNjb6H
-HfMAn0vxxO/Osq4ZZ8mTFBjZ0bcEVjIr
-=6aHX
+iEYEAREKAAYFAk8W1TAACgkQzJrj3cAXR0mZKQCgmMNL7w/Gtihwq7eWNpmQz5XW
+gVMAnjxBWnn7Z/22gLnsHKbjeIuClFZC
+=vPJ2
 -----END PGP SIGNATURE-----
