@@ -56,6 +56,8 @@ REM 2012-02-17 *1 MSG %"Stabilise amd64 dev-python/pyscss-1.1.3%" %a
 REM 2012-02-17 *1 MSG %"Stabilise x86 dev-python/pyscss-1.1.3%" %a
 REM 2012-02-17 *1 MSG %"Stabilise amd64 dev-vcs/pepper-0.3%" %a
 REM 2012-02-17 *1 MSG %"Stabilise x86 dev-vcs/pepper-0.3%" %a
+REM 2012-02-17 *1 MSG %"Stabilise amd64 dev-util/cake-0.2.2%" %a
+REM 2012-02-17 *1 MSG %"Stabilise x86 dev-util/cake-0.2.2%" %a
 REM 2012-02-19 *1 MSG %"Stabilise amd64 dev-python/pycparser-2.05%" %a
 REM 2012-02-19 *1 MSG %"Stabilise x86 dev-python/pycparser-2.05%" %a
 REM 2012-02-19 *1 MSG %"Stabilise amd64 dev-python/attest-0.5.2%" %a
